--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -1,7 +1,7 @@
 <section class="howtomade-section" id="howtomade">
    <div class="container howtomade-container">
       <h2 class="howtomade-title">
-         hOW IT'S<span class="howtomade-title-span"> made?</span>
+         hOW IT&#39;S<span class="howtomade-title-span">&nbsp;made?</span>
       </h2>
       <div class="howtomade-wrapper">
          <div class="howtomade-vido-img-wrap">
@@ -31,26 +31,22 @@
                   class="howtomade-img"
                   src="./img/howmade/video-wpapper-desktop-x1.jpg"
                   alt="making-chocolate-photo"
-                  id="my-image"
                   width="600"
                   height="400"
                />
             </picture>
-            <button class="howtomade-video-btn" type="button" id="button-id">
-               <svg class="howtomade-icon-wrap" width="44" height="44">
-                  <use
-                     href="./img/icons/play.svg#play"
-                     class="howtomade-icon"
-                  ></use>
-               </svg>
-               <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
-                  <use
-                     href="./img/icons/play-mobile.svg#play-mobile"
-                     class="howtomade-icon-mobile"
-                  ></use>
-               </svg>
-            </button>
-            <div id="iframe-id" class="howtomade-video"></div>
+            <svg class="howtomade-icon-wrap" width="44" height="44">
+               <use
+                  href="./img/icons/play.svg#play"
+                  class="howtomade-icon"
+               ></use>
+            </svg>
+            <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
+               <use
+                  href="./img/icons/play-mobile.svg#play-mobile"
+                  class="howtomade-icon-mobile"
+               ></use>
+            </svg>
          </div>
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
