--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -31,22 +31,26 @@
                   class="howtomade-img"
                   src="./img/howmade/video-wpapper-desktop-x1.jpg"
                   alt="making-chocolate-photo"
+                  id="my-image"
                   width="600"
                   height="400"
                />
             </picture>
-            <svg class="howtomade-icon-wrap" width="44" height="44">
-               <use
-                  href="./img/icons/play.svg#play"
-                  class="howtomade-icon"
-               ></use>
-            </svg>
-            <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
-               <use
-                  href="./img/icons/play-mobile.svg#play-mobile"
-                  class="howtomade-icon-mobile"
-               ></use>
-            </svg>
+            <button class="howtomade-video-btn" type="button" id="button-id">
+               <svg class="howtomade-icon-wrap" width="44" height="44">
+                  <use
+                     href="./img/icons/play.svg#play"
+                     class="howtomade-icon"
+                  ></use>
+               </svg>
+               <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
+                  <use
+                     href="./img/icons/play-mobile.svg#play-mobile"
+                     class="howtomade-icon-mobile"
+                  ></use>
+               </svg>
+            </button>
+            <div id="iframe-id" class="howtomade-video"></div>
          </div>
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
