--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -31,12 +31,12 @@
                   class="howtomade-img"
                   src="./img/howmade/video-wpapper-desktop-x1.jpg"
                   alt="making-chocolate-photo"
-                  id="my-image"
+                  id="howtomade-image"
                   width="600"
                   height="400"
                />
             </picture>
-            <button class="howtomade-video-btn" type="button" id="button-id">
+            <button class="howtomade-video-btn" type="button" id="howtomade-video-button-id">
                <svg class="howtomade-icon-wrap" width="44" height="44">
                   <use
                      href="./img/icons/play.svg#play"
@@ -50,7 +50,36 @@
                   ></use>
                </svg>
             </button>
-            <div id="iframe-id" class="howtomade-video"></div>
+            <video
+               id="howtomade-video-id"
+               class="howtomade-video video-js vjs-default-skin vjs-16-9"
+               controls
+               preload="auto"
+               width="600"
+               height="400"
+               data-setup='{"fluid": true}'
+            >
+               <source
+                  src="./video/video-of-making-handmade-chocolate-480p.mp4"
+                  type="video/mp4"
+                  media="(max-width: 480px)"
+               />
+               <source
+                  src="./video/video-of-making-handmade-chocolate-720p.mp4"
+                  type="video/mp4"
+                  media="(max-width: 768px)"
+               />
+               <source
+                  src="./video/video-of-making-handmade-chocolate-1080p.mp4"
+                  type="video/mp4"
+                  media="(max-width: 1024px)"
+               />
+               <source src="./video/video-of-making-handmade-chocolate-1080p.mp4" type="video/mp4" />
+               <p class="vjs-no-js">
+                  To view this video please enable JavaScript, and consider
+                  upgrading to a web browser that supports HTML5 video
+               </p>
+            </video>
          </div>
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
