--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -79,6 +79,7 @@
                   To view this video please enable JavaScript, and consider
                   upgrading to a web browser that supports HTML5 video
                </p>
+               <a href="./video/video-of-making-handmade-chocolate-1080p.mp4">Download the video MP4</a>
             </video>
          </div>
          <div class="howtomade-desc-wrap">
