--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -52,33 +52,26 @@
             </button>
             <video
                id="howtomade-video-id"
-               class="howtomade-video video-js vjs-default-skin vjs-16-9"
                controls
+               class="howtomade-video"
                preload="auto"
                width="600"
                height="400"
-               data-setup='{"fluid": true}'
             >
                <source
-                  src="./video/video-of-making-handmade-chocolate-480p.mp4"
+                  src="./video/video-of-making-handmade-chocolate-1080p.mp4"
                   type="video/mp4"
-                  media="(max-width: 480px)"
                />
                <source
                   src="./video/video-of-making-handmade-chocolate-720p.mp4"
                   type="video/mp4"
-                  media="(max-width: 768px)"
                />
                <source
-                  src="./video/video-of-making-handmade-chocolate-1080p.mp4"
+                  src="./video/video-of-making-handmade-chocolate-480p.mp4"
                   type="video/mp4"
-                  media="(max-width: 1024px)"
                />
-               <source src="./video/video-of-making-handmade-chocolate-1080p.mp4" type="video/mp4" />
-               <p class="vjs-no-js">
-                  To view this video please enable JavaScript, and consider
-                  upgrading to a web browser that supports HTML5 video
-               </p>
+               <source src="./video/video-of-making-handmade-chocolate-360p.mp4" 
+               type="video/mp4" />
                <a href="./video/video-of-making-handmade-chocolate-1080p.mp4">Download the video MP4</a>
             </video>
          </div>
