--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -4,7 +4,7 @@
          hOW IT&#39;S<span class="howtomade-title-span">&nbsp;made?</span>
       </h2>
       <div class="howtomade-wrapper">
-         <div class="howtomade-vido-img-wrap">
+         <div class="howtomade-vido-img-wrap" id="howtomade-vido-img-wrap-id">
             <picture class="howtomade-img-wrap">
                <source
                   srcset="
@@ -12,21 +12,21 @@
                      ./img/howmade/video-wpapper-desktop-x2.jpg 2x
                   "
                   media="(min-width: 1200px)"
-               />
+               >
                <source
                   srcset="
                      ./img/howmade/video-wpapper-tablet-x1.jpg 1x,
                      ./img/howmade/video-wpapper-tablet-x2.jpg 2x
                   "
                   media="(min-width: 768px)"
-               />
+               >
                <source
                   srcset="
                      ./img/howmade/video-wpapper-mobile-x1.jpg 1x,
                      ./img/howmade/video-wpapper-mobile-x2.jpg 2x
                   "
                   media="(max-width: 767px)"
-               />
+               >
                <img
                   class="howtomade-img"
                   src="./img/howmade/video-wpapper-desktop-x1.jpg"
@@ -34,7 +34,7 @@
                   id="howtomade-image"
                   width="600"
                   height="400"
-               />
+               >
             </picture>
             <button class="howtomade-video-btn" type="button" id="howtomade-video-button-id">
                <svg class="howtomade-icon-wrap" width="44" height="44">
@@ -52,26 +52,13 @@
             </button>
             <video
                id="howtomade-video-id"
+               src="./video/video-of-making-handmade-chocolate-720p.mp4"
                controls
                class="howtomade-video"
                preload="auto"
                width="600"
                height="400"
             >
-               <source
-                  src="./video/video-of-making-handmade-chocolate-1080p.mp4"
-                  type="video/mp4"
-               />
-               <source
-                  src="./video/video-of-making-handmade-chocolate-720p.mp4"
-                  type="video/mp4"
-               />
-               <source
-                  src="./video/video-of-making-handmade-chocolate-480p.mp4"
-                  type="video/mp4"
-               />
-               <source src="./video/video-of-making-handmade-chocolate-360p.mp4" 
-               type="video/mp4" />
                <a href="./video/video-of-making-handmade-chocolate-1080p.mp4">Download the video MP4</a>
             </video>
          </div>
