Navr-video-china

--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -4,39 +4,45 @@
          hOW IT&#39;S<span class="howtomade-title-span">&nbsp;made?</span>
       </h2>
       <div class="howtomade-wrapper">
-         <div class="howtomade-vido-img-wrap" id="howtomade-vido-img-wrap-id">
-            <picture class="howtomade-img-wrap">
-               <source
-                  srcset="
-                     ./img/howmade/video-wpapper-desktop-x1.jpg 1x,
-                     ./img/howmade/video-wpapper-desktop-x2.jpg 2x
-                  "
-                  media="(min-width: 1200px)"
-               >
-               <source
-                  srcset="
-                     ./img/howmade/video-wpapper-tablet-x1.jpg 1x,
-                     ./img/howmade/video-wpapper-tablet-x2.jpg 2x
-                  "
-                  media="(min-width: 768px)"
-               >
-               <source
-                  srcset="
-                     ./img/howmade/video-wpapper-mobile-x1.jpg 1x,
-                     ./img/howmade/video-wpapper-mobile-x2.jpg 2x
-                  "
-                  media="(max-width: 767px)"
-               >
-               <img
-                  class="howtomade-img"
-                  src="./img/howmade/video-wpapper-desktop-x1.jpg"
-                  alt="making-chocolate-photo"
-                  id="howtomade-image"
-                  width="600"
-                  height="400"
-               >
-            </picture>
-            <button class="howtomade-video-btn" type="button" id="howtomade-video-button-id">
+         <div class="howtomade-vido-img-wrap" id="howtomade-vidеo-img-wrap-id">
+            <div class="howtomade-picture-wrapper">
+               <picture class="howtomade-img-wrap">
+                  <source
+                     srcset="
+                        ./img/howmade/video-wpapper-desktop-x1.jpg 1x,
+                        ./img/howmade/video-wpapper-desktop-x2.jpg 2x
+                     "
+                     media="(min-width: 1200px)"
+                  />
+                  <source
+                     srcset="
+                        ./img/howmade/video-wpapper-tablet-x1.jpg 1x,
+                        ./img/howmade/video-wpapper-tablet-x2.jpg 2x
+                     "
+                     media="(min-width: 768px)"
+                  />
+                  <source
+                     srcset="
+                        ./img/howmade/video-wpapper-mobile-x1.jpg 1x,
+                        ./img/howmade/video-wpapper-mobile-x2.jpg 2x
+                     "
+                     media="(max-width: 767px)"
+                  />
+                  <img
+                     class="howtomade-img"
+                     src="./img/howmade/video-wpapper-desktop-x1.jpg"
+                     alt="making-chocolate-photo"
+                     id="howtomade-image"
+                     width="600"
+                     height="400"
+                  />
+               </picture>
+            </div>
+            <button
+               class="howtomade-video-btn"
+               type="button"
+               id="howtomade-video-button-id"
+            >
                <svg class="howtomade-icon-wrap" width="44" height="44">
                   <use
                      href="./img/icons/play.svg#play"
@@ -52,14 +58,24 @@
             </button>
             <video
                id="howtomade-video-id"
-               src="./video/video-of-making-handmade-chocolate-720p.mp4"
                controls
                class="howtomade-video"
                preload="auto"
                width="600"
                height="400"
             >
-               <a href="./video/video-of-making-handmade-chocolate-1080p.mp4">Download the video MP4</a>
+               <source
+                  src="./video/video-of-making-handmade-chocolate-720p.mp4"
+                  type="video/mp4"
+               />
+               <source
+                  src="./video/video-of-making-handmade-chocolate-720p.webm"
+                  type="video/mp4"
+               />
+               Your browser does not support the <code>video</code> element.
+               <a href="./video/video-of-making-handmade-chocolate-1080p.mp4"
+                  >Download the video MP4</a
+               >
             </video>
          </div>
          <div class="howtomade-desc-wrap">
