--- a/src/css/section-howtomade.css
+++ b/src/css/section-howtomade.css
@@ -1,7 +1,12 @@
+
 /*!##################### 0px-767px ########################### */
 @media screen and (max-width: 767px) {
    .howtomade-section {
       padding-top: 72px;
+   }
+   .howtomade-img,
+   .howtomade-picture-wrapper {
+   height: 500px;
    }
    .howtomade-img,
    .howtomade-img-wrap {
@@ -73,6 +78,7 @@
 .howtomade-img-wrap {
    position: relative;
 }
+
 .howtomade-img {
    position: relative;
    border-radius: 15px;
@@ -89,7 +95,6 @@
    border-radius: 15px;
    border: 2px solid var(--Orange);
    width: 100%;
-   max-width: 335px;
    height: 100%;
    z-index: 10;
    background-color: black;
@@ -133,6 +138,10 @@
 @media screen and (min-width: 768px) {
    .howtomade-video {
       max-width: 614px;
+   }
+   .howtomade-picture-wrapper {
+   height: 400px;
+   width: 614px;
    }
    .howtomade-icon-wrap-mobile,
    .howtomade-icon-mobile {
@@ -182,9 +191,8 @@
       row-gap: 24px;
       padding-right: 26px;
    }
-   .howtomade-img {
-      max-width: 600px;
-   }
+   .howtomade-img,
+   .howtomade-picture-wrapper,
    .howtomade-video {
       max-width: 600px;
    }
